<resources>
    <string name="app_name">Musician Toolkit</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_my_sheets">My Sheets</string>
    <string name="title_activity_music_news">Music News</string>
    <string name="title_activity_nearby_stores">Nearby Stores</string>
    <string name="title_activity_help">Help</string>
    <string name="help_button_text">Help and Features</string>

    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="hint_title_required">Title (Required)</string>
    <string name="hint_composer">Composer</string>
    <string name="hint_genre">Genre</string>
    <string name="label_title">Title:</string>
    <string name="label_composer">Composer:</string>
    <string name="label_genre">Genre:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the entry</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="entry_added">Entry added successfully</string>
    <string name="entry_not_added">Entry was not added due to an error</string>
    <string name="entry_updated">Entry updated</string>
    <string name="entry_not_updated">Entry was not updated due to an error</string>
    <string name="invalid_query_uri">Invalid query Uri: </string>
    <string name="invalid_insert_uri">Invalid insert Uri: </string>
    <string name="invalid_update_uri">Invalid update Uri: </string>
    <string name="invalid_delete_uri">Invalid delete Uri: </string>
    <string name="insert_failed">Insert failed:</string>
    <string name="title_activity_test">test</string>
    <string name="main_welcome">What would you like to do?</string>
    <string name="aboutdialog_title">About this App</string>
    <string name="aboutdialog_desc">Created by Christopher Tunney (S1315065) Version 1.0</string>
    <string name="under_dev_title">Under Development!</string>
    <string name="under_dev_desc">This feature is currently unusable, but will be fixed in a later release.</string>

    <string name="rss_url">MusicRoom.com</string>
    <string name="help_features_head">Features of this App</string>
    <string name="help_my_sheets_head">Using the My Sheets Feature</string>
    <string name="help_add_sheets_head">Adding Sheet Music Entries to your Library</string>
    <string name="help_edit_sheets_head">Editing a Sheet Entry from your Library</string>
    <string name="help_music_news_head">Using the Music News Page</string>
    <string name="help_features_desc">This app will allow you to store information on any of your sheet music. You can even edit your entries after you add them! You can also view the latest news from the MusicNotes.com blog.</string>
    <string name="help_my_sheets_desc">From the main menu, tap on the My Sheets button. This will display your library of sheet music you have collected and added here.</string>
    <string name="help_add_sheets_desc">From the My Sheets page, tap on the circle button at the bottom right of the screen. This will take you to the form to add a new sheet entry. Tapping any of the blank spaces will bring up the keyboard. Hit the circular save button when you are finished. The title is required but the rest are optional!</string>
    <string name="help_edit_sheets_desc">Tap on an entry from the library. This will take you the edit page. Tapping on the contents you entered previously will bring up the keyboard. Tap on the circular save button when you are finished.</string>
    <string name="help_music_news_desc">From the main menu, tap on the Music News button. After loading, a list will appear, with each item displaying information on each post of the MusicNotes.com blog. Tapping on any of these posts will open that post on the web. You can also access the blog website by tapping on the MUSICNOTES BLOG button at the very top of the screen, which will open the blog in your default browser.</string>>
</resources>
