<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.christopher.mysheetmusic.MainActivity"
    tools:showIn="@layout/activity_main">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">


        <Button
            android:id="@+id/MySheetsButton"
            android:layout_width="@dimen/main_button_size"
            android:layout_height="@dimen/main_button_size"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/title_activity_my_sheets" />

        <Button
            android:id="@+id/MusicNewsButton"
            android:layout_width="@dimen/main_button_size"
            android:layout_height="@dimen/main_button_size"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/title_activity_music_news" />

        <Button
            android:id="@+id/NearbyStoresButton"
            android:layout_width="@dimen/main_button_size"
            android:layout_height="@dimen/main_button_size"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/title_activity_nearby_stores" />

        <Button
            android:id="@+id/HelpButton"
            android:layout_width="@dimen/main_button_size"
            android:layout_height="@dimen/main_button_size"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/title_activity_help" />


    </GridLayout>

    <TextView
        android:text="@string/main_welcome"
        android:textSize="@dimen/main_welcometext_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:id="@+id/welcomeTextView" />

</RelativeLayout>
